--- a/scss/app.scss
+++ b/scss/app.scss
@@ -1,2 +1,7 @@
+@import "base/normalize";
 @import "base/environment";
-@import "modules/site-header";
+@import "base/typebase";
+@import "base/grid";
+@import "base/helpers";
+@import "base/typography";
+@import "modules/SiteHeader";
