--- a/scss/modules/_SiteHeader.scss
+++ b/scss/modules/_SiteHeader.scss
@@ -1,7 +1,20 @@
 [am-SiteHeader] {
-	max-width: 50rem;
-	margin: 2rem auto;
-	padding: 0 1rem
+	max-width: 60rem;
+	padding: 0 1rem;
+	margin: 2rem auto 3rem;
+	text-align: center;
+
+	p {
+		font-size: $scale * 1.1rem;
+		line-height: $scale;
+	}
+}
+
+[am-SiteHeader-Header] {
+	
+	margin: 0 auto;
+	max-width: 45rem;
+
 }
 
 [am-SiteHeader-Strip] {
