--- a/scss/app.scss
+++ b/scss/app.scss
@@ -1,3 +1,4 @@
+@import "base/icon-fonts";
 @import "base/normalize";
 @import "base/environment";
 @import "base/typebase";
@@ -5,6 +6,8 @@
 @import "base/grid";
 @import "base/helpers";
 @import "base/typography";
+@import "base/animations";
 
 @import "modules/SiteHeader";
 @import "modules/Strip";
+@import "modules/BigSpinner";
