--- a/scss/base/_typebase.scss
+++ b/scss/base/_typebase.scss
@@ -27,9 +27,9 @@ html {
 
 p {
     line-height: $leading;
-    margin-top: $leading;
-    margin-bottom: 0;
+    margin-bottom: $leading;
 }
+
 ul,
 ol {
     margin-top: $leading;
@@ -59,19 +59,17 @@ h6 {
     /* Change heading typefaces here */
     font-family: 'rooney-sans', sans-serif;
     font-weight: 700;
-    margin-top: $leading;
-    margin-bottom: 0;
+    margin-bottom: $leading/2;
+    margin-top: $leading*1.5;
     line-height: $leading;
 }
 h1 {
     font-size: 2 * $scale * 1rem;
     line-height: 2 * $leading;
-    margin-top: 2 * $leading;
 }
 h2 {
     font-size: 1 * $scale * 1rem;
     line-height: 1 * $leading;
-    margin-top: 1 * $leading;
 }
 h3 {
    font-size: 0.8 * $scale * 1rem;
