--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -3,5 +3,12 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 p {
-	color: #444;
+	color: #222;
+}
+
+figcaption {
+	color: #555;
+	font-style: italic;
+	text-align: center;
+	margin-bottom: $leading;
 }
