more work on project page, using different versions of canvas header

--- a/scss/modules/_TextContainer.scss
+++ b/scss/modules/_TextContainer.scss
@@ -3,3 +3,9 @@
 	padding: 0 1rem;
 	margin: 0 auto; 
 }
+
+[am-TextContainer-Header] {
+	margin-left: -5rem;
+	margin-right: -5rem;
+	text-align: center;
+}
