--- a/css/app.css
+++ b/css/app.css
@@ -399,6 +399,14 @@ img {
 *, *:before, *:after {
   box-sizing: inherit; }
 
+::-moz-selection {
+  background: #26634E;
+  color: white; }
+
+::selection {
+  background: #26634E;
+  color: white; }
+
 /*! Typebase.scss v0.1.0 | MIT License */
 /* Setup */
 html {
@@ -442,7 +450,7 @@ h6 {
   font-family: 'rooney-sans', sans-serif;
   font-weight: 700;
   margin-bottom: 0.85rem;
-  margin-top: 2.55rem;
+  margin-top: 0;
   line-height: 1.7rem; }
 
 h1 {
@@ -720,5 +728,10 @@ figcaption {
   max-width: 40rem;
   padding: 0 1rem;
   margin: 0 auto; }
+
+[am-TextContainer-Header] {
+  margin-left: -5rem;
+  margin-right: -5rem;
+  text-align: center; }
 
 /*# sourceMappingURL=app.css.map */
