--- a/scss/base/_typebase.scss
+++ b/scss/base/_typebase.scss
@@ -60,7 +60,7 @@ h6 {
     font-family: 'rooney-sans', sans-serif;
     font-weight: 700;
     margin-bottom: $leading/2;
-    margin-top: $leading*1.5;
+    margin-top: 0;
     line-height: $leading;
 }
 h1 {
