--- a/scss/app.scss
+++ b/scss/app.scss
@@ -10,4 +10,5 @@
 @import "modules/SiteHeader";
 @import "modules/Strip";
 @import "modules/BigSpinner";
-@import "modules/TextContainer";
+@import "modules/VidStretch";
+@import "modules/Container";
