--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -6,9 +6,17 @@ p {
 	color: #222;
 }
 
+figure {
+	padding: 0;
+	margin: 0;
+	max-width: 50rem;
+	margin: 3rem 0;
+}
+
 figcaption {
 	color: #555;
 	font-style: italic;
-	text-align: center;
-	margin-bottom: $leading;
+	//text-align: center;
+	margin-top: 0.5rem;
+	margin-bottom: -0.5rem; 
 }
