--- a/scss/modules/_SiteHeader.scss
+++ b/scss/modules/_SiteHeader.scss
@@ -2,11 +2,16 @@
 	max-width: 60rem;
 	padding: 0 1rem;
 	margin: 2rem auto 3rem;
-	text-align: center;
+	//text-align: center;
 
 	p {
 		font-size: $scale * 1.1rem;
 		line-height: $scale;
+	}
+
+	h1 {
+		border-top: 1px solid #ddd;
+		padding-top: 1rem;
 	}
 }
 
@@ -15,6 +20,16 @@
 	margin: 0 auto;
 	max-width: 45rem;
 
+}
+
+[am-SiteHeader-Header="small"] {
+	max-width: 25rem;
+	padding-bottom: 1rem;
+	margin: 0;
+	//border-bottom: 1px solid #ddd;
+	// position: absolute;
+	// left: 0;
+	// top: 0;
 }
 
 [am-SiteHeader-Corner] {
