--- a/scss/app.scss
+++ b/scss/app.scss
@@ -1,3 +1,6 @@
+@import "base/functions";
+@import "base/settings";
+
 @import "base/icon-fonts";
 @import "base/normalize";
 @import "base/environment";
