--- a/scss/base/_typebase.scss
+++ b/scss/base/_typebase.scss
@@ -64,12 +64,36 @@ h6 {
     line-height: $leading;
 }
 h1 {
-    font-size: 2 * $scale * 1rem;
-    line-height: 2 * $leading;
-}
-h2 {
+    
     font-size: 1.5 * $scale * 1rem;
     line-height: 1.5 * $leading;
+    
+
+    @media #{$medium-up} {
+        font-size: 1.8 * $scale * 1rem;
+        line-height: 1.8 * $leading;
+    }
+
+    @media #{$large-up} {
+        font-size: 2 * $scale * 1rem;
+        line-height: 2 * $leading;
+    }
+    
+    
+}
+h2 {
+    font-size: 1.1 * $scale * 1rem;
+    line-height: 1.1 * $leading;
+
+    @media #{$medium-up} {
+        font-size: 1.3 * $scale * 1rem;
+        line-height: 1.3 * $leading;
+    }
+
+    @media #{$large-up} {
+        font-size: 1.5 * $scale * 1rem;
+        line-height: 1.5 * $leading;
+    }
 }
 h3 {
    font-size: 0.8 * $scale * 1rem;
