gifs for midi article

--- a/css/app.css
+++ b/css/app.css
@@ -792,8 +792,8 @@ p {
     [am-ArticleMedia] {
       padding: 3rem; } }
 
-[am-ArticleMedia='auto'] {
-  display: inline-block; }
+[am-ArticleMedia='insta'] {
+  max-width: 35rem; }
 
 [am-ArticleMedia-Caption] {
   color: #555;
