--- a/scss/modules/_ArticleMedia.scss
+++ b/scss/modules/_ArticleMedia.scss
@@ -9,8 +9,8 @@
 	}
 }
 
-[am-ArticleMedia='auto'] {
-	display: inline-block;
+[am-ArticleMedia='insta'] {
+	max-width: 35rem;
 }
 
 [am-ArticleMedia-Caption] {
