--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -5,3 +5,13 @@ h1, h2, h3, h4, h5, h6 {
 p {
 	color: #222;
 }
+
+a {
+	font-weight: bold;
+	transition: 0.2s;
+	display: inline-block;
+
+	&:hover {
+		transform: translateY(-0.2rem);
+	}
+}
