--- a/scss/base/_settings.scss
+++ b/scss/base/_settings.scss
@@ -28,3 +28,6 @@ $media-width: 50rem;
 $media-padding: 3rem;
 
 $bounce-ease: cubic-bezier(0.68, -0.55, 0.265, 1.55);
+
+$primary-color: #F7D9BF;
+$secondary-color: #26634E;
