--- a/partials/foot.html
+++ b/partials/foot.html
@@ -1,5 +1,10 @@
 <div am-SiteFooter data-triEffect>
-	<canvas></canvas>
+	<canvas am-SiteFooter-Bg></canvas>
+	
+	<div am-SiteFooter-Inner>
+		<h1>Test</h1>
+	</div>
+	
 </div>
 
 <script src="/js/app.js" ></script>
