--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -10,6 +10,7 @@ a {
 	font-weight: bold;
 	transition: 0.2s;
 	display: inline-block;
+	color: $secondary-color;
 
 	&:hover {
 		transform: translateY(-0.2rem);
